feat(T012/workflow): coder — implement CRA day update API
- Checkout backend from approved T007 branch (prerequisite resolution)
- PATCH /api/cras/{craId}/days/{date}: update work value and/or note
- Add CraDayEntryRepository, exception classes, CraDayUpdateService
- Add CraDayController + CraApiExceptionHandler (400/409/404 error shapes)
- Add updateWorkValue() to CraDayEntry with invariant enforcement
- Extend CraDayEntryDto with note field; update CraDetailsMapper
- 26 new tests (unit + @WebMvcTest); all 88 tests pass
- pom.xml: add Surefire -Dnet.bytebuddy.experimental=true for Java 26

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>